changed media screen max-width to stop overlap of links

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -116,7 +116,7 @@ nav {
   display: flex;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 505px) {
   nav {
     display: flex;
     flex-wrap: wrap;
@@ -129,13 +129,13 @@ nav {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 505px) {
   nav a:link, nav a:visited {
     color: white;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 505px) {
   nav a:hover {
     color: #5D3FD3;
   }
